# closingline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml  predict.yml  test.yml
dashboard/: next.config.mjs  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: BrierBars.tsx  Calibration.tsx  Monthly.tsx  palette.ts
dashboard/public/: data.json
reports/: backtest.csv  backtest_summary.csv  bias_scan.csv  clv.csv  ev_sim.csv  oracle_lineups.csv  oracle_summary.csv  significance.csv  squad.csv  sweep.csv  sweep_elo.csv  sweep_gbm.csv  sweep_shrinkage.csv
src/closingline/: __init__.py  __main__.py  backtest.py  bias.py  clv.py  data.py  elo.py  evaluate.py  export.py  features.py  gbm.py  markets.py  model.py  oracle.py  paper.py  predict.py  significance.py  squad.py  sweep.py  xg.py  xgdc.py  zoo.py
tests/: test_models.py
